--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "env": {
+    "browser": true,
+    "es6": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
