--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-drag-drop-files": "^2.3.9",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
